src/validation/tests/snapshots/rusty__validation__tests__reference_resolve_tests__resolve_function_calls_and_parameters.snap
---
source: src/validation/tests/reference_resolve_tests.rs
expression: "&diagnostics"
---
error[E048]: Could not resolve reference to boo
  ┌─ <internal>:5:17
  │
5 │                 boo(c);
  │                 ^^^ Could not resolve reference to boo

error[E048]: Could not resolve reference to c
  ┌─ <internal>:5:21
  │
5 │                 boo(c);
  │                     ^ Could not resolve reference to c

error[E048]: Could not resolve reference to c
  ┌─ <internal>:7:26
  │
7 │                 foo(x := c);
  │                          ^ Could not resolve reference to c

error[E089]: Invalid call parameters
  ┌─ <internal>:8:21
  │
8 │                 foo(y := a);
  │                     ^^^^^^ Invalid call parameters

error[E048]: Could not resolve reference to y
  ┌─ <internal>:8:21
  │
8 │                 foo(y := a);
  │                     ^ Could not resolve reference to y
